<resources>
    <string name="app_name">Last Mile</string>
    <string name="driver_assigned">Driver assigned</string>
    <string name="driver_assigned_content">A driver has been assigned to your Request</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="driver_arrives_msg">Your driver is arrived</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_details">View Details</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="plate_number">Plate Number</string>
    <string name="eta">ETA</string>
    <string name="pickups_shipments">Pickups/Shipments</string>
    <string name="receivables">Receivables</string>
    <string name="tracking">Tracking</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="action_settings">Settings</string>
    <string name="menu_reset_data">Reset Data</string>
    <string name="menu_cancel">Cancel Request</string>
    <string name="select_shipment_service">Select Shipment Service</string>
    <string name="select_shipment_interval">Select Shipment Interval</string>
    <string name="weight_kgs">Weights in Kgs</string>
    <string name="value">value here</string>
    <string name="container">Container labeling</string>
    <string name="fragile">Fragile</string>
    <string name="away_from_water">Keep away from water</string>
    <string name="custom_packaging">Custom Packaging</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="emailOrMobile">Email or Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up"> Sign up</string>
    <string name="no_account">No account? </string>
    <string name="forget_password">Forget Password</string>
    <string name="connect_with">or connect with</string>
    <string name="username_error_msg">Please check your E-mail or Mobile Number</string>
    <string name="password_error_msg">Please check your Password</string>
    <string name="login_error_title">Login failed</string>
    <string name="login_error_msg">Username or Password is incorrect</string>
    <string name="password_missing_msg">Please enter your Password</string>
    <string name="username_missing_msg">Please enter your E-mail or Mobile Number</string>
    <string name="connection_error_title">OH NO!</string>
    <string name="connection_error_msg">No internet found, Check your connection or </string>
    <string name="retry">RETRY</string>
    <string name="search">Search</string>
    <string name="request_pickup">REQUEST PICKUP</string>
    <string name="trace_package">TRACE PACKAGE</string>
    <string name="package_type">Package Type</string>
    <string name="review_package_type_title">Package Type:</string>
    <string name="package_weight">Package quantity:</string>
    <string name="document">Document</string>
    <string name="package_document_type">Documents</string>
    <string name="box">Box</string>
    <string name="smallest_weight">1kg Box</string>
    <string name="biggest_weight">25kg Box</string>
    <string name="shipment_nickname">Give nickname to your package(Optional)</string>
    <string name="nickname">Nickname:</string>
    <string name="shipping_service">Shipping Service:</string>
    <string name="brief">What is inside ! *</string>
    <string name="additional_info">Additional services</string>
    <string name="additional_services_msg">Additional service cost will be calculated based on your package…</string>
    <string name="packaging_box"> Packaging Box</string>
    <string name="label_package">Wrap and Label</string>
    <string name="connection_error">Connection Error</string>
    <string name="enable_gps_msg">Turn on location service detector to get use of "LastMile" features</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">CONFIRM</string>
    <string name="next_pickup_details">NEXT - PICKUP DETAILS</string>
    <string name="next_package_details">NEXT - PACKAGE DETAILS</string>
    <string name="next_recipient_details">NEXT - RECIPIENT DETAILS</string>
    <string name="next_pickup_review">NEXT - PICKUP REVIEW</string>
    <string name="custom_package_label">Enter Label Message*</string>
    <string name="paying_at">PAYING AT</string>
    <string name="pickup_time">PICKUP TIME</string>
    <string name="now">Now</string>
    <string name="scheduled">Scheduled</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="estimated_cost">Estimated cost</string>
    <string name="shipment_type">Shipment Type</string>
    <string name="time_interval">Time interval:</string>
    <string name="set_date">SET EXACT DATE OF PICKING</string>
    <string name="payment_at">Payment at:</string>
    <string name="pickup_time_label">Pickup time:</string>
    <string name="pickup_address">Pickup address:</string>
    <string name="recipient">Recipient:</string>
    <string name="recipient_name">Recipient Name*</string>
    <string name="recipient_name_label">Recipient Name:</string>
    <string name="recipient_phone">Mobile Number*</string>
    <string name="recipient_phone_label">Mobile Number:</string>
    <string name="notes">Additional Notes</string>
    <string name="recipient_notes_label">Additional Notes:</string>
    <string name="recipient_address">Recipient address:</string>
    <string name="submit_label">SUBMIT REQUEST</string>
    <string name="cancel_label">CANCEL REQUEST</string>
    <string name="submit">SUBMIT </string>
    <string name="full_Address">Recipient Full Address*</string>
    <string name="building_number">Building Number*</string>
    <string name="submit_conf_msg">Are you sure you want to send</string>
    <string name="select_date_msg">You Selected Invalid Date</string>
    <string name="submit_conf_msg2"> Your Package with Provided Details</string>
    <string name="what_inside">What is inside:</string>
    <string name="take_photo">TAKE A PHOTO</string>
    <string name="choose_from_gallery">SELECT FROM GALLERY</string>
    <string name="remove">Remove Photo</string>
    <string name="image_missing_msg">please take at least one image.</string>
    <string name="image_title">Snap a Photo (At least one image*)</string>
    <string name="brief_missing_msg">please enter package brief.</string>
    <string name="service_missing_msg">please choose shipping service.</string>
    <string name="service_type_missing_msg">please choose shipping time.</string>
    <string name="city_missing_msg">please choose recipient city.</string>
    <string name="label_missing_msg">Please enter package label.</string>
    <string name="recipient_name_missing_msg">please enter recipient name.</string>
    <string name="recipient_phone_missing_msg">please enter recipient mobile number.</string>
    <string name="date_missing_msg">please select date</string>
    <string name="time_missing_msg">please select time interval</string>
    <string name="recipient_country_missing_msg">please choose recipient country.</string>
    <string name="recipient_address_missing_msg">please enter recipient full address.</string>
    <string name="recipient_area_missing_msg">please choose recipient area.</string>
    <string name="recipient_building_missing_msg">please enter recipient building number.</string>
    <string name="recipient_street_missing_msg">please choose recipient street name.</string>
    <string name="package_details">PACKAGE DETAILS</string>
    <string name="pickup_details">PICKUP DETAILS</string>
    <string name="recipient_details">RECIPIENT DETAILS</string>
    <string name="wrong_Address">Wrong Address</string>
    <string name="pickup_review">PICKUP REVIEW</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="save_for_later">SAVE FOR LATER</string>
    <string name="additional_service">Additional Service:</string>
    <string name="cancel_confirmation_msg">Are You sure you want to cancel pickup createPickupRequestParams.</string>
    <string name="payment_at_label">Payment At </string>
    <string name="estimate_label">Estimate Cost </string>
    <string name="schedule_title">SET EXACT DATE OF PICKING</string>
    <string name="time_interval_title">TIME INTERVAL</string>
    <string name="street_validations">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZأ ب ت ث ج ح خ د ذ ر ز س ش ص ض ط ظ ع غ ف ق ك ل م ئ ة ن ه و ي آ ى ؤ ء </string>
    <string name="detect_current_location">Detect current location</string>
    <string name="detect_current_location_failed">Failed to detect current location</string>
    <string name="request_pickup_now">Pickup Now</string>
    <string name="schedule_pickup_request"> Schedule Pickup</string>
    <string name="choose_location_msg">Please, pick your location.</string>
    <string name="choose_valid_location_msg">Please, pick a valid location.</string>
    <string name="waiting_msg">Please, wait for seconds and try pick location again.</string>
    <string name="please_wait">please wait</string>
    <string name="loaded_successfully">loaded successfully</string>
    <string name="all_packages">My Packages</string>
    <string name="all_packages_error_msg">There is No New Packages</string>
    <string name="loading_map">Loading Map…</string>
    <string name="error_loading_pickup_services">An error occurred while loading pickup services</string>
    <string name="error_loading_pickup_services_types">An error occurred while loading pickup services types</string>
    <string name="error_loading_pickup_times_interval">An error occurred while loading pickup available times</string>
    <string name="error_loading_countries">An error occurred while loading countries</string>
    <string name="error_loading_cities">An error occurred while loading cities</string>
    <string name="error_login_msg">An error occurred while login</string>
    <string name="wrap">WRAP</string>
    <string name="label">LABEL</string>
    <string name="pickup_now">NOW</string>
    <string name="pickup_scheduled">SCHEDULED</string>
    <string name="on_demand">ON-DEMAND</string>
    <string name="pickup_review_additional_service_txt">Wrap&amp;Label \"%s\"</string>
    <string name="pay_at_pickup">PICKUP</string>
    <string name="pay_at_delivery">DELIVERY</string>
    <string name="weight_unit">kg quantity</string>
    <string name="pickup_review_package_weight">kg</string>
    <string name="service_type_title">Shipping Service Type *</string>
    <string name="service_time">Shipping Time *</string>
    <string name="country">Country *</string>
    <string name="city">City *</string>
    <string name="comapny_id">companyid</string>
    <string name="document_package">Documents</string>
    <string name="pickup_sent_successfully">Your request is sent successfully</string>
    <string name="pickup_sent_failed">Failed to send your request</string>
    <string name="package_types_response_error">failed to load package types, please check you connection.</string>
    <string name="failed_to_submit_request">failed to submit request</string>
    <string name="package_details_title">PACKAGE DETAILS</string>
    <string name="recipient_details_title">RECIPIENT DETAILS</string>
    <string name="notification_dialog_title">Drivers are Busy</string>
    <string name="notification_dialog_msg">
        Please select another option cause we are sorry that out drivers are busy at the moment.</string>
    <string name="notification_time">5:09 pm</string>
    <string name="reschedule">Reschedule</string>
    <string name="try_later">Try Later</string>
    <string name="cancel_request">Cancel Request</string>
</resources>