<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".customer.deprecated.ConnectionErrorActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clouds"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="@dimen/drawable_padding"
        android:text="@string/connection_error"
        android:textColor="@color/concrete"
        android:textSize="@dimen/text_size_5"
        android:fontFamily="assets/PTS55F.ttf"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/error_icon"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="@dimen/bit_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/white"
        android:paddingBottom="@dimen/bit_margin">

        <TextView
            android:id="@+id/tv_connection_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/connection_error_title"
            android:textColor="@color/concrete"
            android:textSize="@dimen/text_size_2"
            android:fontFamily="assets/PTS55F.ttf"/>

        <TextView
            android:id="@+id/tv_connection_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/connection_error_msg"
            android:textColor="@color/concrete"
            android:textSize="@dimen/text_size_2"
            android:fontFamily="assets/PTS55F.ttf"/>

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_retry_button"
            android:text="@string/retry"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/concrete"
            android:layout_marginTop="@dimen/package_margin"
            android:padding="@dimen/drawable_padding"/>

    </LinearLayout>


</LinearLayout>
