<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/notification_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/notification_sub_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/notification_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/icon_notification" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/notification_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/notification_dialog_title"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/notification_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="2"
                        android:text="@string/notification_time"
                        android:gravity="center"
                        android:textColor="@color/concrete_2"/>

                    <ProgressBar
                        android:id="@+id/layout_notification_item_progress"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="6dp"
                        android:layout_gravity="right|center_vertical"
                        android:indeterminate="true"
                        android:visibility="invisible"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/notification_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_dialog_msg"
                    android:layout_marginBottom="4dp" />


                <LinearLayout
                    android:id="@+id/notification_options_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray_5" />

                    <LinearLayout
                        android:id="@+id/notification_horizontal_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3.5"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp">

                        <TextView
                            android:id="@+id/notification_reschedule"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reschedule"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/notification_try_later"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/try_later"
                            android:textColor="@color/colorAccent"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/notification_cancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:text="@string/cancel_request"
                            android:textColor="@color/colorAccent"
                            android:gravity="end"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_6" />


    </android.support.v7.widget.CardView>

</LinearLayout>
